kubernetes/app-deployment.yml
# --------------------------
# Deployment Application Spring Boot
# --------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitevitrine-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sitevitrine-app
  template:
    metadata:
      labels:
        app: sitevitrine-app
    spec:
      containers:
        - name: app
          image: kayarhabby/sitevitrine-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: 2Gi
            limits:
              ephemeral-storage: 4Gi
