kubernetes/sitevitrineapp.yml
apiVersion: v1
kind: Pod
metadata:
  name: sitevitrineapp
spec:
  containers:
    - name: sitevitrineapp
      image: kayarhabby/sitevitrine-app:latest
      ports:
        - containerPort: 7080
