kubernetes/sitevitrineappsvc.yml
## --------------------------
## Service Application (NodePort)
## --------------------------
#apiVersion: v1
#kind: Service
#metadata:
#  name: sitevitrineapp
#spec:
#  type: NodePort
#  selector:
#    app: sitevitrineapp
#  ports:
#    - port: 8080        # port interne du Service
#      targetPort: 7080  # port du container
#      nodePort: 30007   # port externe accessible depuis ton navigateur


# --------------------------
# Service Application (LoadBalancer)
# --------------------------
#apiVersion: v1
#kind: Service
#metadata:
#  name: sitevitrineapp
#spec:
#  type: LoadBalancer       # <-- remplace NodePort
#  selector:
#    app: sitevitrineapp
#  ports:
#    - port: 80             # port exposé par le LB
#      targetPort: 7080     # port du container

#apiVersion: v1
#kind: Service
#metadata:
#  name: sitevitrine-app-svc
#spec:
#  type: ClusterIP
#  selector:
#    app: sitevitrine-app
#  ports:
#    - port: 80
#      targetPort: 7080

apiVersion: v1
kind: Service
metadata:
  name: sitevitrine-app-nodeport
spec:
  type: NodePort
  selector:
    app: sitevitrine-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
