kubernetes/sitevitrinemysqlsvc.yml
# --------------------------
# Service MySQL (ClusterIP interne)
# --------------------------
apiVersion: v1
kind: Service
metadata:
  name: sitevitrinemysql
spec:
  type: ClusterIP
  selector:
    app: sitevitrinemysql
  ports:
    - port: 3306
      targetPort: 3306
