kubernetes/ingress.yml
# ==========================
# Ingress (ALB public)
# ==========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitevitrine-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sitevitrine-app-svc
                port:
                  number: 80
